Add MC 1.21.3+ support