@@ -2,11 +2,9 @@ package de.xtkq.voidgen.generator.instances;
 
 import com.google.gson.Gson;
 import com.google.gson.JsonSyntaxException;
-import de.xtkq.voidgen.VoidGen;
 import de.xtkq.voidgen.generator.annotations.VoidChunkGenInfo;
 import de.xtkq.voidgen.generator.interfaces.ChunkGen;
 import de.xtkq.voidgen.generator.settings.ChunkGenSettings;
-import org.apache.commons.lang.StringUtils;
 import org.bukkit.block.Biome;
 import org.bukkit.generator.BiomeProvider;
 import org.bukkit.generator.WorldInfo;
@@ -16,14 +14,14 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 
-@VoidChunkGenInfo(versions = {"1.17.1", "1.18", "1.18.1"})
+@VoidChunkGenInfo(versions = {"1.17.1", "1.18", "1.18.1", "1.18.2", "1.19", "1.19.1", "1.19.2", "1.19.3", "1.19.4", "1.20", "1.20.1", "1.20.2", "1.20.3", "1.20.4", "1.21", "1.21.1", "1.21.2"})
 public class VoidChunkGen_1_17_1 extends ChunkGen {
 
     public VoidChunkGen_1_17_1(JavaPlugin javaPlugin, String paramIdentifier) {
         super(javaPlugin);
         Gson gson = new Gson();
 
-        if (StringUtils.isBlank(paramIdentifier)) {
+        if (paramIdentifier.isBlank()) {
             this.chunkGenSettings = new ChunkGenSettings();
             this.javaPlugin.getLogger().info("Generator settings have not been set. Using default values:");
         } else {
